--- a/assets/css/index.scss
+++ b/assets/css/index.scss
@@ -65,14 +65,13 @@ h1 {
   margin: 30px;
   color: white;
 }
-
 .secretNumber {
   width: fit-content;
   padding: 18px 26px;
   background-color: white;
   border: 3px solid #f3b95f;
   font-size: 36px;
-  color: #f5dc6f;
+  color: #f3b95f;
   margin: auto;
 }
 
