--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1,8 +1,7 @@
 * {
   padding: 0;
   margin: 0;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
   font-family: "Press Start 2P";
   cursor: default;
 }
@@ -16,7 +15,6 @@ main {
   height: 100vh;
   background-color: #f5dc6f;
 }
-
 .start .startScreen {
   width: 70%;
   height: 48%;
@@ -25,18 +23,14 @@ main {
   position: absolute;
   left: 50%;
   top: 50%;
-  -webkit-transform: translate(-50%, -50%);
-          transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
 }
-
 .start .startScreen .center {
   position: absolute;
   left: 50%;
   top: 50%;
-  -webkit-transform: translate(-50%, -50%);
-          transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
 }
-
 .start .startScreen .center button {
   padding: 16px 24px;
   background-color: #f5dc6f;
@@ -51,19 +45,12 @@ main {
 }
 
 .top {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -webkit-box-align: start;
-      -ms-flex-align: start;
-          align-items: flex-start;
+  justify-content: space-between;
+  align-items: flex-start;
   padding: 15px;
   color: white;
 }
-
 .top .restart {
   padding: 16px 24px;
   background-color: white;
@@ -88,7 +75,7 @@ h1 {
   background-color: white;
   border: 3px solid #f3b95f;
   font-size: 36px;
-  color: #f5dc6f;
+  color: #f3b95f;
   margin: auto;
 }
 
@@ -96,34 +83,19 @@ h1 {
   width: 70%;
   margin-top: 26px;
   padding-top: 24px;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  justify-content: space-around;
+  align-items: center;
   position: absolute;
   left: 50%;
-  -webkit-transform: translate(-50%);
-          transform: translate(-50%);
+  transform: translate(-50%);
 }
-
 .play .left {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  flex-direction: column;
+  align-items: center;
   margin-right: 26px;
 }
-
 .play .left input {
   padding: 50px;
   width: 230px;
@@ -134,7 +106,6 @@ h1 {
   color: #f3b95f;
   cursor: text;
 }
-
 .play .left .check {
   padding: 14px 20px;
   background-color: white;
@@ -144,29 +115,18 @@ h1 {
   cursor: pointer;
   margin: 20px;
 }
-
 .play .right {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-align: start;
-      -ms-flex-align: start;
-          align-items: flex-start;
+  flex-direction: column;
+  align-items: flex-start;
 }
-
 .play .right p {
   color: white;
   font-size: 16px;
   margin-bottom: 26px;
 }
-
 .play .right span {
   color: white;
   font-size: 16px;
   margin: 26px 0;
-}
-/*# sourceMappingURL=index.css.map */
+}/*# sourceMappingURL=index.css.map */
